# mr_kyutai

./: README.md  fix_cuda_links.sh  plugin_info.json  pyproject.toml  runpod_install_moshi_server.sh  setup.py  setup_cuda_env.sh  start_tts_fixed.sh
src/mr_kyutai/: __init__.py  audio_pacer.py  realtime_stream.py  remote_server.py
src/mr_kyutai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
